# otus-dapp

./: README.md
hw1/: README.md
hw1/ethereum/: .env.example  hardhat.config.ts  package.json  tsconfig.json
hw1/nextjs-frontend/: next.config.js
hw1/scripts/: install-all.ps1  install-all.sh  setup-env.ps1
hw10/: README.md  history.js  package-lock.json  package.json  transactions.js
hw11/: README.md
hw11/counter/: .gitignore  Anchor.toml  package.json
hw12/: README.md  account.txt  wallet.json
hw12/counter/: Anchor.toml  package.json
hw13/: Cargo.toml  README.md  deploy.sh
hw13/src/: lib.rs
hw14/: Cargo.toml  README.md  deploy.sh
hw14/message-board/: Cargo.toml
hw14/verifier/: Cargo.toml
hw15/: README.md  package-lock.json  package.json
hw15/contracts/: PrivateVoting.sol
hw15/scripts/: zkp-demo.js
hw15/test/: PrivateVoting.test.js
hw16/: README.md
hw2/: README.md
hw3/: .gitignore  README.md
hw3/ethereum/: .gitignore
hw4/: README.md  block.go  common.go  go.mod  level1.go  level2.go  main.go
hw5/: README.md  indexer.js  lastblock.js  package-lock.json  package.json  zmqindexer.mjs
hw6/: .gitignore  README.md  getinfo.js  output.txt  package-lock.json
hw7/: README.md  accounts.js  info.js  maketransaction.js  monitoring.js  package-lock.json
hw8/: README.md  balance.js  config.js  last-block.js  monitoring.js  package-lock.json  package.json
hw9/: README.md  balance.js  config.js  create-wallet.js  deploy-wallets.js  info.js  last-block.js  monitoring.js  package-lock.json  package.json  transaction.js
(+71 files in other folders)
